<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app basics -->
    <string name="app_name">翼龙贷</string>
    <string name="pressAgain">再按一次退出</string>
    <string name="my_info">个人信息</string>
    <string name="borrowers">借款人管理</string>
    <string name="settings">设置</string>
    <string name="id_card">身份证</string>
    <string name="other_info">其他信息</string>
    <!-- capture -->
    <string name="use_picture">使用照片</string>
    <string name="retake">重拍</string>
    <string name="ocr_cut_test">OCR检查</string>
    <string name="title_activity_select_picture_type">SelectPictureTypeActivity</string>
    <string name="action_settings">设置</string>
    <string name="camera_settings">相机设置</string>
    <string name="ocr_settings">图像识别设置</string>
    <string name="ocr_engine">图像识别引擎</string>
    <string name="camera_focus">自动对焦</string>
    <string name="camera_beep">快门声</string>
    <string name="camera_flash">闪光灯</string>
    <string name="camera_flash_auto">自动</string>
    <string name="camera_flash_open">开</string>
    <string name="camera_flash_close">关</string>
    <string name="album_folder_tag">album_folder_name</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="storage_dir">存储路径</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_thumbnails">ThumbnailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete">删除</string>
    <string name="upload">上传</string>
    <string name="loading">正在努力加载...</string>
    <string name="title_activity_picture_confirm">PictureConfirmActivity</string>
    <string name="err_nosd">没有检测到存储卡, 请确认存储卡已经正确安装.</string>
    <string name="err_id_needed">必须输入姓名和身份证号码.</string>
    <string name="upload_finished">借款人‘%s’信息上传完毕.</string>
    <string name="upload_fail">上传借款人‘%s’信息失败,请重试或检查服务器连接是否正常.</string>
    <string name="upload_notify">上传借款人信息通知</string>
    <string name="upload_title">翼龙贷-借款人管理</string>
    <string name="err_gps_location">获取GPS信息失败！</string>

    <!-- settings -->
    <string name="account_title">账户</string>
    <string name="account">账号</string>
    <string name="change_password">更改密码</string>
    <string name="connection_testing">服务器连接</string>
    <string name="keep_logged_in">保持登录状态</string>
    <string name="clean_data">清空数据</string>
    <string name="calculate_usage">正在计算...</string>
    <string name="message_title">消息</string>
    <string name="message_notify">消息通知</string>
    <string name="message_vibrate">振动</string>
    <string name="about_title">关于</string>
    <string name="about_app">关于翼龙贷</string>
    <string name="exit">退出</string>
    <string name="joinable">连接服务器成功！</string>
    <string name="unjoinable">连接服务器不成功，请重试！！</string>
    <string name="url_changed">服务器连接已经修改，需要重新登录！</string>

    <!-- message center -->
    <string name="message_list">消息列表</string>
    <string name="select_all">全选</string>
    <string name="delete_all">清空</string>
    <string name="user_message">用户消息</string>
    <string name="system_message">系统消息</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>

    <!-- prompt -->
    <string name="test">测试</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="err_title">错误</string>
    <string name="confirm_del">确定要删除这张图片吗？</string>
    <string name="sd_unavailable">需要的外部存储(例如: SD卡)不可用.</string>
    <string name="sd_no_space">需要的外部存储(例如: SD卡)不可用或者已经没有可用空间.</string>
    <string name="sd_readonly">需要的外部存储(例如: SD卡)是只读的, 无法存储数据.</string>
    <string name="sd_damage">需要的外部存储(例如: SD卡)不可用或者已经损坏.</string>
    <string name="download_ocr_fail">下载OCR数据出错. 请检查网络连接并重试.</string>
    <string name="downloading_ocr">正在下载OCR数据 %s...</string>
    <string name="uncompressing_ocr">正在解压 %s...</string>
    <string name="wait">请等待</string>
    <string name="check_data">正在检查已经安装的OCR数据...</string>
    <string name="check_wifi">准备下载，由于数据量较大，建议在wifi环境下下载，是否继续？</string>
    <string name="no_available_network">没有检测到可用网络，无法下载数据。</string>
    <string name="relogin">登录失效，请到设置中测试服务器连接或退出重新登录。</string>

    <!-- remote api call -->
    <string name="call_api_failed">连接服务器失败, 错误代码: %s.</string>

    <!-- login -->
    <string name="require_username">请输入您的用户名和密码!</string>
    <string name="input_username">用户名</string>
    <string name="input_pwd">密码</string>
    <string name="display_pwd">显示密码</string>
    <string name="login_btn">登  录</string>
    <string name="invalid_password">错误的用户名或密码，请重试！</string>

    <string name="title_activity_test_acts">TestACTS</string>
    <string name="title_activity_image_list_view">OCR分区</string>
</resources>
